[gd_scene load_steps=10 format=3 uid="uid://6wmytnhmed4g"]

[ext_resource type="Script" path="res://Scripts/slime.gd" id="1_epvkb"]
[ext_resource type="Texture2D" uid="uid://dodmvilh4rjww" path="res://Assets/sprites/slime_green.png" id="1_sp3o2"]
[ext_resource type="PackedScene" uid="uid://c6v7e71muq8wb" path="res://Scenes/killzone.tscn" id="2_4a8g4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hq0ge"]
atlas = ExtResource("1_sp3o2")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7heec"]
atlas = ExtResource("1_sp3o2")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2aacl"]
atlas = ExtResource("1_sp3o2")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_887k5"]
atlas = ExtResource("1_sp3o2")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_xt5rm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hq0ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7heec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2aacl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_887k5")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_egek5"]
size = Vector2(10, 12)

[node name="slime" type="Node2D"]
z_index = 2
script = ExtResource("1_epvkb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_xt5rm")
autoplay = "default"
frame_progress = 0.480625

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(9, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-9, 0)

[node name="RayCastFloorLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-9, 7)

[node name="RayCastFloorRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(9, 7)

[node name="killzone" parent="." instance=ExtResource("2_4a8g4")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzone"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_egek5")
